Fix(style): fix mediaqueries and reduce banner buttons size on mobile

--- a/style.css
+++ b/style.css
@@ -740,3 +740,33 @@ abbr{
     filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
     opacity: 1;
   }
+
+@media screen and (max-width: 640px) {
+    header[role=banner] {
+        min-height: 4.1rem
+    }
+  #menu-button, #menu-close {
+    
+    max-width: 44px;
+    max-height: 71px;
+    margin: .1rem 0 0.1rem 0;
+      padding: 0 .3rem 0 0.5rem;
+  }
+#menu-button span.menu-icon, #menu-close span,#menu-button span.menu-icon svg  {
+        max-height: 85% !important;
+        max-width: 85% !important;
+    font-size: 1.8rem;
+    }
+    #menu-button span.menu-text,#menu-close span.menu-text {
+        font-size: .7rem;
+        margin-top: 0.2em;
+    }
+}
+
+@media screen and (min-width: 1306px) {
+  .wrapper {
+  
+  grid-template-columns: repeat(auto-fill,minmax(30vw, 1fr));
+  
+  }
+}
